adding first 2 hour slots for an outline

--- a/index.html
+++ b/index.html
@@ -30,27 +30,27 @@
     </header>
     <div class="container">
       <!-- Timeblocks go here -->
-      <div class="row">
-        <div class="col">
-          <p>row 1 column 1</p>
+      <div class="row time-block" id="9">
+        <div class="col hour">
+          <p>9 a.m.</p>
         </div>
-        <div class="col-8">
-          <p>row 1 column 2</p>
-        </div>
-        <div class="col">
-          <p>row 1 column 3</p>
-        </div> 
+        <textarea class="col-10 description">
+          
+        </textarea>
+        <button class="col btn saveBtn">
+          <i class="far fa-save"></i>
+        </button> 
       </div>
-      <div class="row">
-        <div class="col">
-          <p>row 2 column 1</p>
+      <div class="row time-block" id="10">
+        <div class="col hour">
+          <p>10 a.m.</p>
         </div>
-        <div class="col-8">
-          <p>row 2 column 2</p>
-        </div>
-        <div class="col">
-          <p>row 2 column 3</p>
-        </div>
+        <textarea class="col-10 description">
+          
+        </textarea>
+        <button class="col btn saveBtn">
+          <i class="far fa-save"></i>
+        </button> 
       </div>
       <div class="row">
         <div class="col">
